fix overflow

--- a/resources/stylesheet/style.css
+++ b/resources/stylesheet/style.css
@@ -1,5 +1,11 @@
+*{
+  box-sizing: border-box;
+  
+}
 body{
     font-family: 'Lato', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 /* Main Cards */
 #slide-cards #card-1,#card-2,#card-3{
@@ -11,6 +17,7 @@ body{
     transition: 1s;
     visibility:hidden;
     transition: 0.5s;
+    overflow: hidden;
 }
 #slide-cards #card-1
 {
